syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package="github.com/P3rCh1/chat-server/proto/userpb";

package userpb;

service User {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc ChangeName (ChangeNameRequest) returns (ChangeNameResponse);
    rpc Profile (ProfileRequest) returns (ProfileResponse);
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    int32 UID = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message ChangeNameRequest {
    int32 UID = 1;
    string new_name= 2;
}

message ChangeNameResponse {}

message ProfileRequest {
    int32 UID = 1;
}

message ProfileResponse {
    int32 UID = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
}
